<resources>
    <string name="app_name">Insider Game</string>

    <string name="start_game">ゲームを始める</string>

    <string name="player_number">プレイヤー人数</string>
    <string name="nin">人</string>
    <string name="start">START</string>
    <string name="display_role">役職を表示します</string>
    <string name="yes">はい</string>
    <string name="you_is">あなたは</string>
    <string name="desu">です</string>
    <string name="theme_is">お題は</string>
    <string name="master">マスター</string>
    <string name="come_out">は名乗り出てください</string>
    <string name="start_question_time">質問タイム開始</string>
    <string name="question_time">質問タイム</string>
    <string name="correct_answer">正解</string>
    <string name="discussion_finished">議論終了</string>
    <string name="discussion_time">議論タイム</string>
    <string name="description_discussion">"議論する内容\n\n1. 正解を答えた人がインサイダーか\n2. 違う場合、インサイダーが誰なのか"</string>
    <string name="help_button">help button</string>
</resources>
