<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".selectnumber.SelectNumberFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/player_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_number"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/selected_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/select_number"
            app:layout_constraintEnd_toEndOf="@id/select_number"
            app:layout_constraintStart_toStartOf="@id/select_number"
            app:layout_constraintTop_toTopOf="@id/select_number" />

        <Spinner
            android:id="@+id/select_number"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/player_number"
            app:layout_constraintTop_toBottomOf="@id/player_number" />

        <TextView
            android:id="@+id/nin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nin"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="@+id/player_number"
            app:layout_constraintStart_toEndOf="@+id/select_number"
            app:layout_constraintTop_toBottomOf="@id/player_number" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start_btn"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/start"
            app:layout_constraintEnd_toEndOf="@+id/player_number"
            app:layout_constraintStart_toStartOf="@+id/player_number"
            app:layout_constraintTop_toBottomOf="@+id/select_number" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>